--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,12 +1,12 @@
-name: GitHub Actions Demo
+name: GitHub Actions Demo1
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on:
   push:
     branches: [main]
   workflow_dispatch:
 jobs:
-  test:
-    runs-on: self-hosted
+  Test:
+    runs-on: ubuntu-latest
     steps:
       - run: apt update -y
       - run: ifconfig
