--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,4 +15,4 @@ jobs:
         run: |
           apt-get update && apt-get install -y net-tools
           ifconfig
-          pip -V
+          pip3 -V
