--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,4 +15,5 @@ jobs:
         run: |
           apt-get update && apt-get install -y net-tools
           ifconfig
+          apt install python3-pip -y
           pip3 -V
