--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,6 +9,10 @@ jobs:
   ifconfig:
     runs-on: ubuntu-latest
     steps:
+      # copy git 仓库到虚拟机上
+      - name: 'Checkout codes'
+        uses: actions/checkout@v2
+
       - name: Run ifconfig
         run: |
           sed -i 's/archive.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list
