--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,10 +8,13 @@ on:
 jobs:
   Make env:
     runs-on: ubuntu-latest
+    container: ubuntu
     steps:
       - name: 修改源
         run: |
           sed -i 's/archive.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list
+      - name: 更新源
+        run: |
           apt-get update
       - name: 安装pip
         run: |
