--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,3 +29,6 @@ jobs:
       - name: 安装mkdocs依赖
         run: |
           pip install mkdocs-material
+    steps:
+      - name: Checkout code to workspace
+        uses: actions/checkout@v3
