--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: 修改pip源
         run: |
           python3 -m pip install -i https://pypi.tuna.tsinghua.edu.cn/simple --upgrade pip
-          python3 -m pip install -i https://pypi.tuna.tsinghua.edu.cn/simple --upgrade pip
+          pip3 config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
           pip3 install NumPy -i https://pypi.tuna.tsinghua.edu.cn/simple
           pip3 install statsmodels -i https://pypi.tuna.tsinghua.edu.cn/simple
           pip3 install pandas -i https://pypi.tuna.tsinghua.edu.cn/simple
