--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,6 +19,7 @@ jobs:
       - name: 安装node.js和npm
         run: |
           apt install nodejs npm -y
+          npm config set registry https://registry.npm.taobao.org
           nodejs --version
       - name: 安装pip
         run: |
