--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,6 +39,6 @@ jobs:
       - name: Checkout code to workspace
         uses: actions/checkout@v2
       - name: mkdocs build
-        uses: |
+        run: |
         mkdocs build
         ls
