--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,10 +16,9 @@ jobs:
       - name: 更新源
         run: |
           apt-get update
-      - name: 安装node.js和npm
+      - name: 安装nodejs和npm
         run: |
           apt install nodejs npm -y
-          nodejs --version
       - name: 安装pip
         run: |
           apt install python3-pip -y
