--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,7 +35,7 @@ jobs:
           pip3 install matplotlib -i https://pypi.tuna.tsinghua.edu.cn/simple
       - name: 安装mkdocs依赖
         run: |
-          pip install mkdocs mkdocs-material mkdocs-static-i18n mkdocs-material-extensions mkdocs-minify-plugin mkdocs-markdownextradata-plugin mkdocs-git-authors-plugin mkdocs-git-authors-plugin mkdocs-git-revision-date-localized-plugin mkdocs-link-preview-plugin https://github.com/bmcorser/fontawesome-markdown/archive/master.zip
+          pip install mkdocs mkdocs-material mkdocs-static-i18n mkdocs-material-extensions mkdocs-minify-plugin mkdocs-markdownextradata-plugin mkdocs-git-authors-plugin mkdocs-git-authors-plugin mkdocs-git-revision-date-localized-plugin mkdocs-link-preview-plugin bs4 https://github.com/bmcorser/fontawesome-markdown/archive/master.zip
       - name: Checkout code to workspace
         uses: actions/checkout@v2
       - name: mkdocs build
